#CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(OclMDPlatformTests)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SRC_DIR}/base/include" "${GTEST_DIR}/include")
SET(SHARED_LINKS OclMD pthread "-L${GTEST_DIR}" gtest)

ENABLE_TESTING() #testing enabled in this directory

FILE(GLOB TEST_PROGS "TestCpu*.*")
FOREACH(TEST_PROG ${TEST_PROGS})
    GET_FILENAME_COMPONENT(TEST_FILE ${TEST_PROG} NAME_WE)
    ADD_EXECUTABLE(${TEST_FILE} ${TEST_PROG})
    TARGET_LINK_LIBRARIES(${TEST_FILE} ${SHARED_LINKS})
    ADD_TEST(${TEST_FILE} ${EXECUTABLE_OUTPUT_PATH}/${TEST_FILE})
ENDFOREACH(TEST_PROG ${TEST_PROGS})
