#cmakeLists file for OMP platform tests
#CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SRC_DIR}/base/include" "${GTEST_DIR}/include"
"${GMOCK_DIR}/include" "${CMAKE_CURRENT_SOURCE_DIR}/platform/omp/include")
SET(SHARED_LINKS OclMD pthread "-L${GTEST_DIR}" gtest "-L${GMOCK_DIR}" gmock)

ENABLE_TESTING() #testing enabled in this directory

FILE(GLOB TEST_PROGS "Test*.*")
FOREACH(TEST_PROG ${TEST_PROGS})
    GET_FILENAME_COMPONENT(TEST_FILE ${TEST_PROG} NAME_WE)
    ADD_EXECUTABLE(${TEST_FILE} ${TEST_PROG})
    TARGET_LINK_LIBRARIES(${TEST_FILE} ${SHARED_LINKS})
    ADD_TEST(${TEST_FILE} ${EXECUTABLE_OUTPUT_PATH}/${TEST_FILE})
ENDFOREACH(TEST_PROG ${TEST_PROGS})
